fix images stretching

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -9,6 +9,7 @@ header {
   .logo {
     // outline: 2px solid red;
     height: 60px;
+    object-fit: contain;
     // height: fit-content;
     // width: fit-content;
     width: auto;
